@@ -1,0 +1,15 @@
+<!DOCTYPE html>
+<html>
+ <head>
+  <title>
+  </title>
+ </head>
+ <body><a class="special" href="#tips">Visit the Useful Tips Section</a><div>Within a div <p>or within a paragraph <a href="#">or within a link</a></p>
+  </div>
+  <ul>
+   <li>Some text would be here</li>
+   <li>Some other text would be here</li>
+  </ul><a id="tips">Useful Tips Section</a><form><input name="vehicle" required="required" type="checkbox" value="Bike" /><span class="first">I have a bike</span><br /><input name="vehicle" optional="optional" type="checkbox" value="Motorcycle" /><span>I have a motorcycle</span><br /><input type="submit" value="Submit" /><p style="color: #FF0000;">Complete the form</p>
+  </form>
+ </body>
+</html>
